--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <input type="text" name="login" placeholder="Username" class="input-1" />
                 <div class="overlap-text">
                     <input type="password" name="pass" placeholder="Password" class="input-2" />
-                    <a href="#">Forgot?</a>
+                    <a href="https://www.instagram.com/accounts/password/reset/">Forgot?</a>
                 </div>
                 <input type="submit" value="Log in" class="btn" />
             </form>
@@ -29,7 +29,7 @@
     </div>
     <div class="sub-content">
         <div class="s-part">
-            Don't have an account?<a href="#">Sign up</a>
+            Don't have an account?<a href="https://www.instagram.com/accounts/emailsignup/">Sign up</a>
         </div>
     </div>
 </div>
