--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="sub-content">
         <div class="s-part">
-            У вас ещё нет аккаунта<a href="https://www.instagram.com/accounts/emailsignup/">Зарегистрироваться</a>
+            У вас ещё нет аккаунта?<a href="https://www.instagram.com/accounts/emailsignup/">Зарегистрироваться</a>
         </div>
     </div>
 </div>
